Added selct to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World-Clock</title>
@@ -8,6 +9,18 @@
     <script src="/index.js"></script>
 </head>
 <body>
+    <h1>World Clock</h1>
+    <form>
+        <select name="" id="country">
+        <option value="Selectacity">Select a city...</option>
+        <option value=""></option>
+        <option value=""></option>
+        <option value=""></option>
+        <option value=""></option>
+        <option value=""></option>
+        </select>
+    </form>
+
 
 
     <footer>
