Included basic html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,28 @@
         <option value=""></option>
         <option value=""></option>
         </select>
+
+        
     </form>
 
+    <div class="city">
+        <h2>Kenya</h2>
+        <p>August 15th 2022</p>
+        <div class="time">01:45 PM</div>
+    </div>
+    <div class="city">
+        <h2>Kenya</h2>
+        <p>August 15th 2022</p>
+        <div class="time">01:45 PM</div>
+    </div>
+    <div class="city">
+        <h2>Kenya</h2>
+        <p>August 15th 2022</p>
+        <div class="time">01:45 PM</div>
+    </div>
 
 
+    <br><br>
     <footer>
         coded by <a href="https://github.com/Olive-Njoroge">Olive Njoroge</a>
     </footer>
