Added the styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="/index.js"></script>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
     <form>
         <select name="" id="country">
@@ -25,25 +26,33 @@
     </form>
 
     <div class="city">
+        <div>
         <h2>Kenya</h2>
         <p>August 15th 2022</p>
+        </div>
+        <div class="time">01:45 <small>PM</small></div>
+    </div>
+    <div class="city">
+        <div>
+        <h2>Kenya</h2>
+        <p>August 15th 2022</p>
+        </div>
         <div class="time">01:45 PM</div>
     </div>
     <div class="city">
+        <div>
         <h2>Kenya</h2>
         <p>August 15th 2022</p>
+        </div>
         <div class="time">01:45 PM</div>
     </div>
-    <div class="city">
-        <h2>Kenya</h2>
-        <p>August 15th 2022</p>
-        <div class="time">01:45 PM</div>
     </div>
 
 
     <br><br>
     <footer>
-        coded by <a href="https://github.com/Olive-Njoroge">Olive Njoroge</a>
+        Coded with ❤ by <strong>Olive Njoroge</strong> and open-sourced on <a href="https://github.com/Olive-Njoroge">Github</a>
     </footer>
+    
     
 </body>
