--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>World-Clock</title>
     <link rel="stylesheet" href="/Styles.css">
     <script src="/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -25,27 +27,21 @@
         
     </form>
 
-    <div class="city">
+    <div class="city" id="Nairobi">
         <div>
-        <h2>Kenya</h2>
-        <p>August 15th 2022</p>
+        <h2>Nairobi</h2>
+        <p class="date"></p>
         </div>
-        <div class="time">01:45 <small>PM</small></div>
+        <div class="time" ></div>
     </div>
-    <div class="city">
+    <div class="city" id="Chicago">
         <div>
-        <h2>Kenya</h2>
-        <p>August 15th 2022</p>
+        <h2>Chicago</h2>
+        <p class="date" id="Chicagodate"></p>
         </div>
-        <div class="time">01:45 PM</div>
+        <div class="time" id="Chicagotime" ></div>
     </div>
-    <div class="city">
-        <div>
-        <h2>Kenya</h2>
-        <p>August 15th 2022</p>
-        </div>
-        <div class="time">01:45 PM</div>
-    </div>
+    
     </div>
 
 
