Added Cities to Select from

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <form>
         <select name="" id="country">
         <option value="Selectacity">Select a city...</option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        <option value=""></option>
-        </select>
-
+        <option value="Africa/Lagos">Lagos</option>
+        <option value="US/Hawaii">Hawaii</option>
+        <option value="Atlantic/Bermuda">Bermuda</option>
+        <option value="Asia/Seoul">Seoul</option>
+        <option value="America/Panama">Panama</option>
+        <option value="Africa/Mogadishu">Mogadishu</option>
         
     </form>
+
+    <div class="cities">
 
     <div class="city" id="Nairobi">
         <div>
