--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <form>
             <select id="country">
                 <option value="Selectacity">Select a city...</option>
+                <option value="current">Current location</option>
                 <option value="Africa/Lagos">Lagos</option>
                 <option value="US/Hawaii">Hawaii</option>
                 <option value="Atlantic/Bermuda">Bermuda</option>
