updated the link to my github

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <br><br>
     <footer>
-        Coded with ❤ by <strong>Olive Njoroge</strong> and open-sourced on <a href="https://github.com/Olive-Njoroge">Github</a>
+        Coded with ❤ by <strong>Olive Njoroge</strong> and open-sourced on <a href="https://github.com/Olive-Njoroge/World-Clock">Github</a>
     </footer>
     
     
