Added a div for Bangkok

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         </div>
         <div class="time" id="Chicagotime" ></div>
     </div>
+
+    <div class="city" id="Bangkok">
+        <div>
+            <h2>Bangkok</h2>
+            <p class="date" id="Bangkokdate"></p>
+        </div>
+        <div class="time" id="Bangkoktime"></div>
+    </div>
     
     </div>
 
